infrastructure/dev/ingress/master-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: master-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: master.openfiles.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: master-service
                port:
                  number: 50051
